# workflows-collection-public

./: CONTRIBUTING.md
.github/: CODEOWNERS  sync-config.yaml
codeception-tests-configuration/: matrix-config.json  matrix-contig-mariadb-only.json
config/: composer-ignore-list.json  symfony6-freeze.json  vulnerabilities-ingore-list.json
docs-generator/: .gitignore  AGENTS.md  README.md  docusaurus.config.js  docusaurus.config.js.repos-tests  package-lock.json  package.json  sidebar-modificator.js  sidebars.js  versionConfiguration.js
osv/: 2020-0.toml  (+6 more)
scripts/security-advisory-automation/: README.md  cli.js  index.js  pyproject.toml
scripts/security-advisory-automation/config/: package_repo_map.yaml  supported-versions.json
scripts/security-advisory-automation/lib/: advisory.js  branches.js  ghsa.js  orchestrate.js  report.js  routing.js  source.js  triage-report.js  triage.js  versions-drift.js  versions.js
scripts/security-advisory-automation/src/advisory_automation/: advisory.py  advisory_source.py  branches.py  dryrun.py  ghsa.py  package_map.py  routing.py
scripts/security-advisory-automation/tests/: advisory.test.js  branches.test.js  cli.test.js  ghsa.test.js  index.test.js  orchestrate.test.js  report.test.js  routing.test.js  source.test.js  test_advisory.py  test_advisory_source.py  test_branches.py  test_dryrun.py  test_ghsa.py  test_package_map.py  test_routing.py  triage-report.test.js  triage.test.js  versions-drift.test.js  versions.test.js
scripts/security-advisory-automation/tests/fixtures/: advisory_sample.json  package_repo_map.yaml
(+77 files in other folders)
